--- a/Baby-shop/css/style.css
+++ b/Baby-shop/css/style.css
@@ -1,3 +1,15 @@
+body {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 100;
+	font-size: 15px;
+	color: black;
+}
+
+.main-header {
+	max-width: 1920px;
+	margin: 0 auto;
+}
+
 .main-header__content-wrapper {
 	display: flex;
 	flex-wrap: wrap;
@@ -5,21 +17,29 @@
 	margin: 0 auto;
 	box-sizing: border-box;
 	padding: 0 15px;
-	background: green;
+	padding-top: 15px;
 }
 
 .phone {
 	width: 50%;
+	margin: 0;
 }
 
 .delivery {
 	width: 50%;
 	text-align: right;
+	text-decoration: none;
+	color: black;
+}
+
+.delivery:hover {
+	color: #689418;
 }
 
 .social {
 	width: 50%;
 	height: 16px;
+	padding-top: 46px;
 }
 
 .social__vk {
@@ -57,6 +77,8 @@
 	width: 50%;
 	height: 43px;
 	text-align: right;
+	padding-top: 36px;
+	padding-bottom: 46px;
 }
 
 .user-navigation__item {
@@ -68,6 +90,7 @@
 	border-radius: 50%;
 	background: #f4f7f8;
 	cursor: pointer;
+	margin-left: 25px;
 }
 
 .user-navigation__login::before {
@@ -105,7 +128,81 @@
 
 .user-navigation__value {
 	position: absolute;
+	top: 25px;
+	right: 25px;
 	width: 26px;
 	height: 26px;
 	background: #ee4e23;
+	font-size: 12px;
+	font-weight: 500;
+	text-align: center;
+	padding-top: 5px;
+	box-sizing: border-box;
+}
+
+.logo {
+	display: block;
+	position: absolute;
+	top: 44px;
+	left: 50%;
+	transform: translate(-50%, 0);
+}
+
+.logo__name {
+	display: block;
+	font-size: 60px;
+	font-weight: 700;
+	text-align: center;
+}
+
+.logo__signature {
+	display: block;
+	text-align: center;
+	font-size: 12px;
+	text-transform: uppercase;
+}
+
+.main-navigation__category-list {
+	list-style-type: none;
+	background: #2f2f34;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+}
+
+.main-navigation__category-link {
+	display: block;
+	text-decoration: none;
+	font-size: 13px;
+	font-weight: 500;
+	text-transform: uppercase;
+	color: white;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+.main-navigation__category-item:hover .main-navigation__subcategory-list {
+	display: block;
+}
+
+.main-navigation__category-item {
+	position: relative;
+}
+
+.main-navigation__subcategory-list {
+	padding: 0;
+	list-style-type: none;
+	display: none;
+	background: white;
+}
+
+.main-navigation__subcategory-link {
+	display: block;
+	text-decoration: none;
+	font-size: 13px;
+	font-weight: 500;
+	color: black;
+	text-align: center;
+	padding-top: 12px;
+	padding-bottom: 12px;
 }
