--- a/Baby-shop/css/style.css
+++ b/Baby-shop/css/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Montserrat', sans-serif;
-	font-weight: 100;
-	font-size: 15px;
+	font-weight: 500;
+	font-size: 20px;
 	color: black;
 }
 
@@ -45,33 +45,33 @@ body {
 }
 
 .delivery:hover {
-	color: #689418;
+	color: #e23709;
 }
 
 .social {
 	width: 50%;
-	height: 16px;
+	height: 40px;
 	padding-top: 46px;
 }
 
 .social__vk {
 	display: inline-block;
-	width: 16px;
-	height: 16px;
+	width: 40px;
+	height: 42px;
 }
 
 .social__instagram {
 	display: inline-block;
-	width: 16px;
-	height: 16px;
-	margin-left: 20px;
+	width: 40px;
+	height: 40px;
+	margin-left: 40px;
 }
 
 .social__vk::before {
 	position: absolute;
 	content: "";
-	width: 16px;
-	height: 16px;
+	width: 40px;
+	height: 40px;
 	background: url(../images/icons/vk.png) no-repeat;
 	background-size: cover;
 }
@@ -79,83 +79,87 @@ body {
 .social__instagram::before {
 	position: absolute;
 	content: "";
-	width: 16px;
-	height: 16px;
+	width: 32px;
+	height: 32px;
 	background: url(../images/icons/instagram.png) no-repeat;
 	background-size: cover;
 }
 
 .user-navigation {
 	width: 50%;
-	height: 43px;
+	height: 60px;
 	text-align: right;
 	padding-top: 36px;
-	padding-bottom: 46px;
+	padding-bottom: 29px;
 }
 
 .user-navigation__item {
 	position: relative;
 	border: none;
 	display: inline-block;
-	width: 43px;
-	height: 43px;
+	width: 60px;
+	height: 60px;
 	border-radius: 50%;
 	background: #f4f7f8;
 	cursor: pointer;
 	margin-left: 25px;
 }
 
+.user-navigation__login {
+	margin-left: 0;
+}
+
 .user-navigation__login::before {
 	position: absolute;
-	top: 13px;
-	left: 14px;
+	top: 4px;
+	left: 2px;
 	content: "";
-	width: 16px;
-	height: 16px;
+	width: 56px;
+	height: 56px;
 	background: url(../images/icons/user.png) no-repeat;
 	background-size: cover;
 }
 
 .user-navigation__likes::before {
 	position: absolute;
-	top: 14px;
-	left: 13px;
+	top: 13px;
+	left: 12px;
 	content: "";
-	width: 18px;
-	height: 16px;
-	background: url(../images/icons/heart.png) no-repeat;
+	width:36px;
+	height: 36px;
+	background: url(../images/icons/heart.jpg) no-repeat;
 	background-size: cover;
 }
 
 .user-navigation__basket::before {
 	position: absolute;
-	top: 14px;
-	left: 13px;
+	top: 15px;
+	left: 14px;
 	content: "";
-	width: 18px;
-	height: 16px;
-	background: url(../images/icons/bascket.png) no-repeat;
+	width: 30px;
+	height: 30px;
+	background: url(../images/icons/basket.png) no-repeat;
 	background-size: cover;
 }
 
 .user-navigation__value {
 	position: absolute;
-	top: 25px;
-	right: 25px;
-	width: 26px;
-	height: 26px;
+	top: 35px;
+	right: 35px;
+	width: 34px;
+	height: 34px;
 	background: #ee4e23;
-	font-size: 12px;
-	font-weight: 500;
+	font-size: 15px;
 	text-align: center;
-	padding-top: 5px;
+	padding-top: 9px;
 	box-sizing: border-box;
+	color: black;
 }
 
 .logo {
 	display: block;
 	position: absolute;
-	top: 44px;
+	top: 30px;
 	left: 50%;
 	transform: translate(-50%, 0);
 }
@@ -170,7 +174,8 @@ body {
 .logo__signature {
 	display: block;
 	text-align: center;
-	font-size: 12px;
+	font-size: 20px;
+
 	text-transform: uppercase;
 }
 
@@ -185,8 +190,8 @@ body {
 .main-navigation__category-link {
 	display: block;
 	text-decoration: none;
-	font-size: 13px;
-	font-weight: 500;
+	font-size: 30px;
+	font-weight: 700;
 	text-transform: uppercase;
 	color: white;
 	padding-top: 15px;
@@ -215,8 +220,7 @@ body {
 .main-navigation__subcategory-link {
 	display: block;
 	text-decoration: none;
-	font-size: 13px;
-	font-weight: 500;
+	font-size: 30px;
 	color: black;
 	text-align: center;
 	padding-top: 12px;
@@ -227,50 +231,113 @@ body {
 	color: #e23709;
 }
 
-.main-navigation__button-wrapper {
+.main-navigation__open-button {
 	position: absolute;
-	top: 230px;
+	padding: 0;
+	top: 215px;
 	left: 90%;
 	width: 50px;
 	height: 40px;
 	cursor: pointer;
+	border: none;
+	background: transparent;
 }
 
-.main-navigation__open-button {
+.main-navigation__open-paint {
 	display: block;
-	top: 15px;
+	top:30px;
 	left: 0;
 	width: 50px;
 	height: 10px;
 	border-radius: 5px;
-	background: red;
-	border: none;
+	background: white;
+	margin: 0;
 }
 
-.main-navigation__open-button::before {
+.main-navigation__open-paint::before {
 	position: absolute;
 	content: "";
-	top: 15px;
+	top: 30px;
 	left: 0;
 	width: 50px;
 	height:10px;
 	border-radius: 5px;
-	background: red;
+	background: white;
 	border: none;
 }
 
-.main-navigation__open-button::after {
+.main-navigation__open-paint::after {
 	position: absolute;
 	content: "";
-	top: -15px;
+	top: 0;
 	left: 0;
 	width: 50px;
 	height: 10px;
 	border-radius: 5px;
-	background: red;
+	background: white;
 	border: none;
 }
 
+.search-form {
+	display: block;
+	position: absolute;
+	top: 210px;
+	left: 80%
+}
+
+.search-form__button {
+	border: none;
+	width: 50px;
+	height: 50px;
+	background: transparent;
+	cursor: pointer;
+}
+
+.search-form__button::before {
+	position: absolute;
+	content: "";
+	top: 0;
+	left: 0;
+	width: 50px;
+	height: 50px;
+	background: url(../images/icons/search.png) no-repeat;
+	background-size: cover;
+}
+
+.main-navigation__close-button {
+	display: block;
+	position: absolute;
+	top: 14px;
+	left: 90%;
+	height: 38px;
+	width: 38px;
+	border: none;
+	padding: 0;
+	background: transparent;
+	cursor: pointer;
+}
+
+.main-navigation__close-paint {
+	display: block;
+	position: absolute;
+	top: 14px;
+	left: -6px;
+	width: 50px;
+	height: 10px;
+	border-radius: 5px;
+	background: white;
+	transform: rotate(45deg);
+}
+
+.main-navigation__close-paint::before {
+	display: block;
+	content: "";
+	width: 50px;
+	height: 10px;
+	border-radius: 5px;
+	background: white;
+	transform: rotate(90deg);
+}
 
 
 
