--- a/Baby-shop/css/style.css
+++ b/Baby-shop/css/style.css
@@ -5,16 +5,24 @@ body {
 	color: black;
 }
 
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+:focus {
+	outline: none;
 }
 
-.hidden {
-	display: none;
+a:hover {
+	color: #e23709;
+}
+
+.red {
+	color: #e23709;
+}
+
+.visually-hidden {
+ 	position: absolute;
+  	clip: rect(0 0 0 0);
+ 	 width: 1px;
+ 	 height: 1px;
+ 	 margin: -1px;
 }
 
 .button {
@@ -43,7 +51,8 @@ body {
 	padding-top: 15px;
 }
 
-.phone {
+.version {
+	display: block;
 	width: 50%;
 	margin: 0;
 }
@@ -53,66 +62,58 @@ body {
 	text-align: right;
 	text-decoration: none;
 	color: black;
-}
-
-.delivery:hover {
-	color: #e23709;
+	margin-bottom: 20px;
 }
 
 .social {
 	width: 50%;
-	height: 40px;
-	padding-top: 30px;
+	padding-top: 20px;
 }
 
 .social__vk {
 	display: inline-block;
-	width: 56px;
-	height: 56px;
+	width: 58px;
+	height: 34px;
 }
 
 .social__instagram {
 	display: inline-block;
-	width: 56px;
-	height: 48px;
+	width: 34px;
+	height: 34px;
 	margin-left: 30px;
 }
 
 .social__vk::before {
-	position: absolute;
+	display: block;
 	content: "";
-	width: 56px;
-	height: 56px;
+	width: 100%;
+	height: 100%;
 	background: url(../images/icons/vk.png) no-repeat;
 	background-size: cover;
 }
 
 .social__instagram::before {
-	position: absolute;
+	display: block;
 	content: "";
-	width: 40px;
-	height: 40px;
+	width: 100%;
+	height: 100%;
 	background: url(../images/icons/instagram.png) no-repeat;
 	background-size: cover;
 }
 
 .user-navigation {
 	width: 50%;
-	height: 60px;
 	text-align: right;
-	padding-top: 20px;
-	padding-bottom: 29px;
+	margin-bottom: 30px;
 }
 
 .user-navigation__item {
 	position: relative;
-	border: none;
 	display: inline-block;
 	width: 70px;
 	height: 70px;
 	border-radius: 50%;
 	background: #f4f7f8;
-	cursor: pointer;
 	margin-left: 10px;
 }
 
@@ -129,6 +130,21 @@ body {
 	height: 66px;
 	background: url(../images/icons/user.png) no-repeat;
 	background-size: cover;
+}
+
+.user-navigation__login:hover::before {
+	position: absolute;
+	top: 0;
+	left: 2px;
+	content: "";
+	width: 66px;
+	height: 66px;
+	background: url(../images/icons/user-activ-2.png) no-repeat;
+	background-size: cover;
+}
+
+.user-navigation__login:hover {
+	background: #e23709;
 }
 
 .user-navigation__likes::before {
@@ -168,39 +184,37 @@ body {
 	color: black;
 }
 
-.logo {
+.main-navigation {
+	position: relative;
+}
+
+.logo-header {
 	display: block;
+	width: 140px;
 	position: absolute;
-	top: 30px;
+	top: -150px;
 	left: 50%;
 	transform: translate(-50%, 0);
 }
 
-.logo__name {
-	display: block;
-	font-size: 70px;
-	font-weight: 700;
-	text-align: center;
-}
-
-.logo__signature {
-	display: block;
-	text-align: center;
-	font-size: 20px;
-
-	text-transform: uppercase;
-}
-
 .main-navigation__category-list {
+	position: absolute;
+	top: 0;
 	list-style-type: none;
 	background: #2f2f34;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 	text-align: center;
+	overflow: hidden;
+	z-index: 2;
+	transition: 0.5s;
+	height: 0;
 }
 
 .main-navigation__category-link {
-	display: block;
+	position: relative;
+	display: inline-block;
 	text-decoration: none;
 	font-size: 46px;
 	font-weight: 700;
@@ -210,12 +224,55 @@ body {
 	padding-bottom: 20px;
 }
 
-.main-navigation__category-item:hover .main-navigation__subcategory-list {
+.main-navigation__category-button {
+	position: absolute;
+	top: 0;
+	left: 240px;
 	display: block;
+	width: 90px;
+	height: 100%;
+	background: transparent;
+	cursor: pointer;
+	border: none;
+	transition: 0.5s;
 }
 
-.main-navigation__category-item:hover .main-navigation__category-link {
-	color: #e23709;
+.main-navigation__category-icon {
+	position: relative;
+	display: block;
+	width: 40px;
+	height: 0px;
+	margin: 0 auto;
+}
+
+.main-navigation__category-icon::after {
+	position: absolute;
+	display: block;
+	content: "";
+	top: 0px;
+	left: -12px;
+	width: 40px;
+	height: 6px;
+	border-radius: 5px;
+	background: white;
+	transform: rotate(45deg);
+}
+
+.main-navigation__category-icon::before {
+	position: absolute;
+	display: block;
+	content: "";
+	top: 0px;
+	left: 12px;
+	width: 40px;
+	height: 6px;
+	border-radius: 5px;
+	background: white;
+	transform: rotate(-45deg);
+}
+
+.red.main-navigation__category-icon::after, .red.main-navigation__category-icon::before {
+	background: #e23709;
 }
 
 .main-navigation__category-item {
@@ -223,136 +280,32 @@ body {
 }
 
 .main-navigation__subcategory-list {
+	font-size: 36px;
+	display: block;
 	padding: 0;
 	list-style-type: none;
 	background: white;
-	display: none;
+	overflow: hidden;
+	transition: 0.5s;
+	height: 0;
+}
+
+.main-navigation__subcategory-item {
 }
 
 .main-navigation__subcategory-link {
 	display: block;
 	text-decoration: none;
-	font-size: 36px;
 	color: black;
 	text-align: center;
 	padding-top: 12px;
 	padding-bottom: 12px;
+	font-size: 36px;
 }
 
-.main-navigation__subcategory-link:hover {
-	color: #e23709;
+.main-navigation__category-accent {
+	display: none;
 }
-
-.main-navigation__open-button {
-	position: absolute;
-	padding: 0;
-	top: 215px;
-	left: 90%;
-	width: 50px;
-	height: 40px;
-	cursor: pointer;
-	border: none;
-	background: transparent;
-}
-
-.main-navigation__open-paint {
-	display: block;
-	top:30px;
-	left: 0;
-	width: 50px;
-	height: 10px;
-	border-radius: 5px;
-	background: white;
-	margin: 0;
-}
-
-.main-navigation__open-paint::before {
-	position: absolute;
-	content: "";
-	top: 30px;
-	left: 0;
-	width: 50px;
-	height:10px;
-	border-radius: 5px;
-	background: white;
-	border: none;
-}
-
-.main-navigation__open-paint::after {
-	position: absolute;
-	content: "";
-	top: 0;
-	left: 0;
-	width: 50px;
-	height: 10px;
-	border-radius: 5px;
-	background: white;
-	border: none;
-}
-
-.search-form {
-	display: block;
-	position: absolute;
-	top: 210px;
-	left: 80%
-}
-
-.search-form__button {
-	border: none;
-	width: 50px;
-	height: 50px;
-	background: transparent;
-	cursor: pointer;
-}
-
-.search-form__button::before {
-	position: absolute;
-	content: "";
-	top: 0;
-	left: 0;
-	width: 50px;
-	height: 50px;
-	background: url(../images/icons/search.png) no-repeat;
-	background-size: cover;
-}
-
-.main-navigation__close-button {
-	display: block;
-	position: absolute;
-	top: 26px;
-	left: 90%;
-	height: 38px;
-	width: 38px;
-	border: none;
-	padding: 0;
-	background: transparent;
-	cursor: pointer;
-}
-
-.main-navigation__close-paint {
-	display: block;
-	position: absolute;
-	top: 14px;
-	left: -6px;
-	width: 50px;
-	height: 10px;
-	border-radius: 5px;
-	background: white;
-	transform: rotate(45deg);
-}
-
-.main-navigation__close-paint::before {
-	display: block;
-	content: "";
-	width: 50px;
-	height: 10px;
-	border-radius: 5px;
-	background: white;
-	transform: rotate(90deg);
-}
-
-
-
 
 
 
@@ -361,9 +314,143 @@ body {
 
 
 .main-content {
+	position: relative;
 	max-width: 1920px;
 	margin: 0 auto;
 }
+
+
+
+
+
+
+
+
+.buttons {
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
+}
+
+.buttons-wrapper {
+	position: sticky;
+	top: 0px;
+	display: block;
+	z-index: 3;
+}
+
+.navigation-button {
+	display: block;
+	position: relative;
+	padding: 0;
+	width: 93px;
+	height: 93px;
+	cursor: pointer;
+	border: none;
+	background: transparent;
+	margin: 0 auto;
+}
+
+.navigation-button__paint {
+	position: relative;
+	display: block;
+	width: 50px;
+	height: 8px;
+	border-radius: 4px;
+	background: white;
+	margin: 0 auto;
+	transition: 0.5s;
+}
+
+.navigation-button__paint::before {
+	position: absolute;
+	content: "";
+	top: 12px;
+	left: 0;
+	width: 50px;
+	height:8px;
+	border-radius: 4px;
+	background: white;
+	border: none;
+	transition: 0.5s;
+}
+
+.navigation-button__paint::after {
+	position: absolute;
+	content: "";
+	top: -12px;
+	left: 0;
+	width: 50px;
+	height: 8px;
+	border-radius: 4px;
+	background: white;
+	border: none;
+	transition: 0.5s;
+}
+
+.navigation-button--active .navigation-button__paint {
+	height: 0;
+}
+
+.navigation-button--active .navigation-button__paint::after {
+	transform: rotate(45deg) translate(5px, 5px);
+}
+
+.navigation-button--active .navigation-button__paint::before {
+	transform: rotate(-45deg) translate(12px, -12px);
+}
+
+.search-button {
+	display: block;
+	position: relative;
+	border: none;
+	width: 93px;
+	height: 93px;
+	background: transparent;
+	cursor: pointer;
+}
+
+.search-button::before {
+	display: block;
+	margin: 0 auto;
+	content: "";
+	width: 50px;
+	height: 50px;
+	background: url(../images/icons/search-3.png) no-repeat;
+	background-size: cover;
+}
+
+.filter-button {
+	display: block;
+	position: relative;
+	width: 93px;
+	height: 93px;
+	border: none;
+	background: transparent;
+	cursor: pointer;
+}
+
+.filter-button::after {
+	display: block;
+	content: "";
+	width: 55px;
+	height: 65px;
+	margin: 0 auto;
+	background: url(../images/icons/filter-3.png);
+	background-size: cover;
+}
+
+.hidden {
+	display: none;
+}
+
+
+
+
+
+
+
 
 
 
@@ -378,6 +465,7 @@ body {
 	max-width: 1170px;
 	margin: 0 auto;
 	box-sizing: border-box;
+	margin-top: 50px;
 }
 
 .category-title {
@@ -444,21 +532,24 @@ body {
 .slider-button--left, .slider-button--right {
 	display: block;
 	position: absolute;
-	top: 160px;
-	transform: translate(-50%);
+	top: 50%;
 	border: none;
 	width: 80px;
 	height: 80px;
 	border-radius: 50%;
 	background: #e8ecef;
+	cursor: pointer;
+	z-index: 1;
 }
 
 .slider-button--left {
-	left: 10%
+	left: 10%;
+	transform: translate(-50%, -50%);
 }
 
 .slider-button--right {
 	left: 90%;
+	transform: rotate(180deg) translate(50%, 50%);
 }
 
 .slider-button__paint--left, .slider-button__paint--right {
@@ -484,14 +575,6 @@ body {
 	border-radius: 4px;
 	background: #758a95;
 	transform: rotate(90deg);
-}
-
-.slider-button--right, .slider-button--left {
-	cursor: pointer;
-}
-
-.slider-button--right {
-	transform: rotate(180deg) translate(50%);
 }
 
 .discount-card {
@@ -629,6 +712,7 @@ body {
 	border-radius: 50%;
 	cursor: pointer;
 	opacity: 0.99;
+	transition: 0.5s;
 	z-index: 1;
 }
 
@@ -735,18 +819,9 @@ body {
 	position: relative;
 }
 
-.set-button--left, .set-button--right {
-	z-index: 1;
-	top: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.set-button--right {
-	transform: translate(-50%, -50%) rotate(180deg);
-}
-
 .rotate {
 	transform: rotate(180deg);
+	transition: 0.5s;
 }
 
 
@@ -761,6 +836,7 @@ body {
 
 .quote {
 	text-align: center;
+	margin-top: 50px;
 }
 
 .quote-title {
@@ -830,6 +906,7 @@ body {
 
 .blog{
 	text-align: center;
+	margin-top: 50px;
 }
 
 .blog-title {
@@ -879,7 +956,86 @@ body {
 }
 
 .main-footer {
-	height: 200px;
 	background: #e8ecef;
 	margin-top: 50px;
+}
+
+.footer-wrapper {
+	max-width: 1170px;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	align-content: space-between;
+	position: relative;
+	margin: 0 auto;
+	padding: 0 15px;
+	height: 260px;	
+}
+
+.logo-footer {
+	display: block;
+	width: 80px;
+}
+
+.pay {
+	display: block;
+	margin: 20px 0;
+}
+
+.pay__item {
+	display: inline-block;
+	width: 52px;
+	height: 39px;
+}
+
+.pay--visa::before {
+	display: block;
+	width: 100%;
+	height: 100%;
+	content: "";
+	background: url(../images/icons/visa.png);
+	background-size: cover;
+}
+
+.pay--mastercard::before {
+	display: block;
+	width: 100%;
+	height: 100%;
+	content: "";
+	background: url(../images/icons/mastercard.png);
+	background-size: cover;
+}
+
+.pay--paypal::before {
+	display: block;
+	width: 100%;
+	height: 100%;
+	content: "";
+	background: url(../images/icons/paypal.png);
+	background-size: cover;
+}
+
+.footer-wrapper > a {
+	text-decoration: none;
+	color: black;
+	font-size: 20px;
+	margin: 8px 0;
+}
+
+a:hover {
+	color: #e23709;
+}
+
+.copy {
+	display: block;
+	text-align: center;
+	padding-bottom: 30px;
+}
+
+.social-footer {
+	margin-bottom: 10px;
+}
+
+.red {
+	color: #e23709;
 }
