--- a/Baby-shop/css/style.css
+++ b/Baby-shop/css/style.css
@@ -143,11 +143,11 @@ a:hover {
 	content: "";
 	width: 66px;
 	height: 66px;
-	background: url(../images/icons/user-activ-2.png) no-repeat;
+	background: url(../images/icons/user-activ.png) no-repeat;
 	background-size: cover;
 }
 
-.user-navigation__login:hover {
+.user-navigation__login:hover, .user-navigation__likes:hover, .user-navigation__basket:hover {
 	background: #e23709;
 }
 
@@ -158,7 +158,18 @@ a:hover {
 	content: "";
 	width: 46px;
 	height: 46px;
-	background: url(../images/icons/heart.jpg) no-repeat;
+	background: url(../images/icons/heart.png) no-repeat;
+	background-size: cover;
+}
+
+.user-navigation__likes:hover::before {
+	position: absolute;
+	top: 13px;
+	left: 12px;
+	content: "";
+	width: 46px;
+	height: 46px;
+	background: url(../images/icons/heart-activ.png) no-repeat;
 	background-size: cover;
 }
 
@@ -173,13 +184,24 @@ a:hover {
 	background-size: cover;
 }
 
+.user-navigation__basket:hover::before {
+	position: absolute;
+	top: 16px;
+	left: 16px;
+	content: "";
+	width: 36px;
+	height: 36px;
+	background: url(../images/icons/basket-activ.png) no-repeat;
+	background-size: cover;
+}
+
 .user-navigation__value {
 	position: absolute;
 	top: 35px;
 	right: 35px;
 	width: 40px;
 	height: 40px;
-	background: #ee4e23;
+	background: #689418;
 	font-size: 20px;
 	font-weight: 700;
 	text-align: center;
@@ -206,19 +228,18 @@ a:hover {
 
 .main-navigation__category-list {
 	position: absolute;
-	top: 0;
 	list-style-type: none;
 	background: #2f2f34;
 	width: 100%;
 	margin: 0;
 	padding: 0;
 	text-align: center;
-	overflow: hidden;
+	overflow-y: auto;
 	z-index: 2;
+	height: 0;
 	-webkit-transition: 0.5s;
 	-o-transition: 0.5s;
 	transition: 0.5s;
-	height: 0;
 }
 
 .main-navigation__category-link {
