--- a/Baby-shop/css/style.css
+++ b/Baby-shop/css/style.css
@@ -27,13 +27,13 @@ a:hover {
 }
 
 .button {
-	padding: 15px 30px;
+	padding: 7px 15px;
 	background: #689418;
 	border: none;
 	border-radius: 25px;
 	color: white;
 	text-transform: uppercase;
-	font-size: 20px;
+	font-size: 10px;
 	cursor: pointer;
 }
 
@@ -277,8 +277,8 @@ a:hover {
 	-webkit-transition: 0.5s;
 	-o-transition: 0.5s;
 	transition: 0.5s;
-	padding-top: 20px;
-	padding-bottom: 30px;
+	padding-top: 8px;
+	padding-bottom: 15px;
 	z-index: 0;
 }
 
@@ -303,12 +303,12 @@ a:hover {
 	-webkit-transition: 0.5s;
 	-o-transition: 0.5s;
 	transition: 0.5s;
-	padding: 20px 0;
+	padding: 8px 0;
 }
 
 .user-menu__forget-title {
 	display: block;
-	margin: 50px 0;
+	margin: 25px 0;
 	color: white;
 }
 
@@ -335,17 +335,17 @@ a:hover {
 	display: block;
 	width: 80%;
 	color: white;
-	font-size: 18px;
+	font-size: 10px;
 	font-weight: 300;
 	text-align: center;
 	height: 1px;
 	background: white;
-	margin: 20px 0;
+	margin: 10px 0;
 }
 
 .user-menu__servis-or {
 	position: absolute;
-	top: -10px;
+	top: -5px;
 	left: 50%;
 	-webkit-transform: translateX(-50%);
 	    -ms-transform: translateX(-50%);
@@ -368,9 +368,9 @@ a:hover {
 .input {
 	padding: 0 10px;
 	border: none;
-	border-radius: 26px;
-	height: 40px;
-	margin-bottom: 20px;
+	border-radius: 10px;
+	height: 20px;
+	margin-bottom: 10px;
 }
 
 .user-menu__link {
@@ -379,7 +379,7 @@ a:hover {
 	display: flex;
 	-ms-flex-pack: distribute;
 	    justify-content: space-around;
-	margin-top: 20px;
+	margin-top: 10px;
 }
 
 .user-menu__forget, .user-menu__reg {
@@ -404,31 +404,32 @@ a:hover {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 93px;
-	height: 93px;
+	width: 40px;
+	height: 40px;
 	border: none;
 	background: transparent;
+	cursor: pointer;
 }
 
 .user-navigation__back-paint {
 	position: relative;
 	display: block;
-	width: 50px;
-	height: 8px;
-	border-radius: 4px;
+	width: 25px;
+	height: 4px;
+	border-radius: 2px;
 	background: white;
 	margin: 0 auto;
 }
 
 .user-navigation__back-paint::before {
 	position: absolute;
-	top: 4.5px;
+	top: 2px;
 	left: -2px;
 	display: block;
 	content: "";
-	width: 20px;
-	height: 8px;
-	border-radius: 4px;
+	width: 10px;
+	height: 4px;
+	border-radius: 2px;
 	-webkit-transform: rotate(45deg);
 	    -ms-transform: rotate(45deg);
 	        transform: rotate(45deg);
@@ -437,13 +438,13 @@ a:hover {
 
 .user-navigation__back-paint::after {
 	position: absolute;
-	top: -4.5px;
+	top: -2px;
 	left: -2px;
 	display: block;
 	content: "";
-	width: 20px;
-	height: 8px;
-	border-radius: 4px;
+	width: 10px;
+	height: 4px;
+	border-radius: 2px;
 	-webkit-transform: rotate(-45deg);
 	    -ms-transform: rotate(-45deg);
 	        transform: rotate(-45deg);
@@ -468,14 +469,15 @@ a:hover {
 
 .search-form__input {
 	border: none;
-	height: 40px;
+	height: 20px;
 	border-radius: 20px;
-	padding-left: 20px;
+	padding-left: 10px;
 }
 
 .search-form__button {
-	margin: 20px 0;
-	margin-left: 30px;
+	margin: 10px 0;
+	margin-left: 15px;
+	margin-right: 35px;
 }
 
 
@@ -526,20 +528,20 @@ a:hover {
 	position: relative;
 	display: inline-block;
 	text-decoration: none;
-	font-size: 46px;
+	font-size: 20px;
 	font-weight: 700;
 	text-transform: uppercase;
 	color: white;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .main-navigation__category-button {
 	position: absolute;
 	top: 0;
-	left: 240px;
+	left: 100px;
 	display: block;
-	width: 90px;
+	width: 40px;
 	height: 100%;
 	background: transparent;
 	cursor: pointer;
@@ -552,7 +554,7 @@ a:hover {
 .main-navigation__category-icon {
 	position: relative;
 	display: block;
-	width: 40px;
+	width: 0px;
 	height: 0px;
 	margin: 0 auto;
 }
@@ -562,10 +564,10 @@ a:hover {
 	display: block;
 	content: "";
 	top: 0px;
-	left: -12px;
-	width: 40px;
-	height: 6px;
-	border-radius: 5px;
+	left: -16px;
+	width: 20px;
+	height: 3px;
+	border-radius: 3px;
 	background: white;
 	-webkit-transform: rotate(45deg);
 	    -ms-transform: rotate(45deg);
@@ -577,10 +579,10 @@ a:hover {
 	display: block;
 	content: "";
 	top: 0px;
-	left: 12px;
-	width: 40px;
-	height: 6px;
-	border-radius: 5px;
+	left: -4px;
+	width: 20px;
+	height:3px;
+	border-radius: 3px;
 	background: white;
 	-webkit-transform: rotate(-45deg);
 	    -ms-transform: rotate(-45deg);
@@ -596,7 +598,6 @@ a:hover {
 }
 
 .main-navigation__subcategory-list {
-	font-size: 36px;
 	display: block;
 	padding: 0;
 	list-style-type: none;
@@ -608,17 +609,13 @@ a:hover {
 	height: 0;
 }
 
-.main-navigation__subcategory-item {
-}
-
 .main-navigation__subcategory-link {
 	display: block;
 	text-decoration: none;
 	color: black;
 	text-align: center;
-	padding-top: 12px;
-	padding-bottom: 12px;
-	font-size: 36px;
+	font-size: 16px;
+	padding: 6px 0;
 }
 
 .main-navigation__category-accent {
@@ -663,8 +660,8 @@ a:hover {
 	display: block;
 	position: relative;
 	padding: 0;
-	width: 93px;
-	height: 93px;
+	width: 40px;
+	height: 40px;
 	cursor: pointer;
 	border: none;
 	background: transparent;
@@ -674,9 +671,9 @@ a:hover {
 .navigation-button__paint {
 	position: relative;
 	display: block;
-	width: 50px;
-	height: 8px;
-	border-radius: 4px;
+	width: 25px;
+	height: 4px;
+	border-radius: 2px;
 	background: white;
 	margin: 0 auto;
 	-webkit-transition: 0.5s;
@@ -689,11 +686,11 @@ a:hover {
 .navigation-button__paint::before {
 	position: absolute;
 	content: "";
-	top: 12px;
+	top: 7px;
 	left: 0;
-	width: 50px;
-	height:8px;
-	border-radius: 4px;
+	width: 25px;
+	height:4px;
+	border-radius: 2px;
 	background: white;
 	border: none;
 	-webkit-transition: 0.5s;
@@ -706,11 +703,11 @@ a:hover {
 .navigation-button__paint::after {
 	position: absolute;
 	content: "";
-	top: -12px;
+	top: -7px;
 	left: 0;
-	width: 50px;
-	height: 8px;
-	border-radius: 4px;
+	width: 25px;
+	height: 4px;
+	border-radius: 2px;
 	background: white;
 	border: none;
 	-webkit-transition: 0.5s;
@@ -735,9 +732,9 @@ a:hover {
 }
 
 .navigation-button--active .navigation-button__paint::before {
-	-webkit-transform: rotate(-45deg) translate(12px, -12px);
-	    -ms-transform: rotate(-45deg) translate(12px, -12px);
-	        transform: rotate(-45deg) translate(12px, -12px);
+	-webkit-transform: rotate(-45deg) translate(5px, -5px);
+	    -ms-transform: rotate(-45deg) translate(5px, -5px);
+	        transform: rotate(-45deg) translate(5px, -5px);
 	-webkit-box-shadow: none;
 	        box-shadow: none;
 }
@@ -746,8 +743,8 @@ a:hover {
 	display: block;
 	position: relative;
 	border: none;
-	width: 93px;
-	height: 93px;
+	width: 40px;
+	height: 40px;
 	background: transparent;
 	cursor: pointer;
 }
@@ -756,8 +753,8 @@ a:hover {
 	display: block;
 	margin: 0 auto;
 	content: "";
-	width: 60px;
-	height: 60px;
+	width: 30px;
+	height: 30px;
 	background: url(../images/icons/search-20.png) no-repeat;
 	background-size: cover;
 }
@@ -765,8 +762,8 @@ a:hover {
 .filter-button {
 	display: block;
 	position: relative;
-	width: 93px;
-	height: 93px;
+	width: 40px;
+	height: 40px;
 	border: none;
 	background: transparent;
 	cursor: pointer;
@@ -775,8 +772,8 @@ a:hover {
 .filter-button::after {
 	display: block;
 	content: "";
-	width: 55px;
-	height: 65px;
+	width: 25px;
+	height: 30px;
 	margin: 0 auto;
 	background: url(../images/icons/filter-6.png);
 	background-size: cover;
@@ -823,22 +820,22 @@ a:hover {
 
 .category {
 	text-align: center;
-	padding-bottom: 30px;
+	padding-bottom: 5px;
 	max-width: 1170px;
 	margin: 0 auto;
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
-	margin-top: 50px;
+	margin-top: 20px;
 }
 
 .category-title {
 	margin: 0;
-	padding-top: 20px;
+	padding-top: 10px;
 }
 
 .category-signature {
 	margin: 0;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 }
 
 
@@ -848,6 +845,7 @@ a:hover {
 	display: flex;
 	-ms-flex-pack: distribute;
 	    justify-content: space-around;
+	padding: 0 7px;
 }
 
 .category-item {
@@ -856,10 +854,15 @@ a:hover {
 	display: block;
 	text-decoration: none;
 	color: black;
-	margin: 0 15px;
+	margin-right: 7px;
+}
+
+.category-item:last-child {
+	margin-right: 0px;
 }
 
 .category-item__title {
+	display: block;
 	margin: 0;
 	padding-top: 10px;
 	font-weight: 500;
@@ -890,7 +893,7 @@ a:hover {
 }
 
 .discount-wrapper {
-	margin: 70px 0;
+	margin: 40px 0;
 	position: relative;
 	background: #f8fafb;
 	position: relative;
@@ -900,8 +903,8 @@ a:hover {
 	position: relative;	
 	text-align: center;
 	max-width: 1170px;
-	padding-left: 15px;
-	padding-right: 15px;
+	padding-left: 7px;
+	padding-right: 7px;
 	margin: 0 auto;
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
@@ -990,8 +993,8 @@ a:hover {
 	position: absolute;
 	top: 50%;
 	border: none;
-	width: 80px;
-	height: 80px;
+	width: 36px;
+	height: 36px;
 	border-radius: 50%;
 	background: #e8ecef;
 	cursor: pointer;
@@ -1015,11 +1018,11 @@ a:hover {
 .slider-button__paint--left, .slider-button__paint--right {
 	display: block;
 	position: absolute;
-	top: 25px;
-	left: 18px;
-	width: 40px;
-	height: 8px;
-	border-radius: 4px;
+	top: 10px;
+	left: 5px;
+	width: 20px;
+	height: 4px;
+	border-radius: 2px;
 	background: #758a95;
 	-webkit-transform: rotate(-45deg);
 	    -ms-transform: rotate(-45deg);
@@ -1029,12 +1032,12 @@ a:hover {
 .slider-button__paint--left::before, .slider-button__paint--right::before{
 	display: block;
 	position: absolute;
-	top: 17px;
-	left: -16px;
+	top: 8.5px;
+	left: -8.5px;
 	content: "";
-	width: 40px;
-	height: 8px;
-	border-radius: 4px;
+	width: 20px;
+	height: 4px;
+	border-radius: 2px;
 	background: #758a95;
 	-webkit-transform: rotate(90deg);
 	    -ms-transform: rotate(90deg);
@@ -1057,25 +1060,25 @@ a:hover {
 	background: white;
 	display: inline-block;
 	width: 28%;
-	padding: 50px 35px;
+	padding: 20px 7px;
 	border-radius: 3px;
-	-webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
-	        box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
+	        box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
 	z-index: 2;
 }
 
 .discount-card__tittle {
 	display: block;
-	font-size: 36px;
+	font-size: 15px;
 	font-weight: 400;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 }
 
 .discount-info {
 	margin-left: 37%;
 	display: inline-block;
 	width: 32%;
-	padding: 70px 0;
+	padding: 15px 0;
 }
 
 .discount-data {
@@ -1085,15 +1088,17 @@ a:hover {
 
 .discount-data__item {
 	display: inline-block;
-	width: 66px;
-	height: 60px;
-	font-size: 20px;
+	width: 22%;
+	height: 24px;
+	font-size:8px;
 	color: white;
 	margin: 0;
-	border-right: 2px solid #f8fafb;
+	border-right: 1px solid #f8fafb;
 	text-align: center;
-	padding-top: 10px;
-	padding-right: 3px;
+	padding-top: 3px;
+	padding-right: 1px;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 .discount-data__sec {
@@ -1103,12 +1108,12 @@ a:hover {
 .discount-product-name {
 	font-weight: 400;
 	margin: 0;
-	padding-top: 20px;
+	padding-top: 10px;
 }
 
 .discount-price {
 	margin: 0;
-	padding-top: 10px;
+	padding-top: 6px;
 }
 
 .discount-new-price {
@@ -1120,7 +1125,7 @@ a:hover {
 }
 
 .discount-button {
-	margin-top: 40px;
+	margin-top: 16px;
 }
 
 
@@ -1136,27 +1141,27 @@ a:hover {
 
 .set-declaration {
 	margin: 0;
-	font-size: 36px;
+	font-size: 18px;
 }
 
 .set-advert {
 	margin: 0;
-	margin-top: 15px;
+	margin-top: 7px;
 }
 
 .set-button {
 	display: block;
 	margin: 0 auto;
-	margin-top: 15px;
+	margin-top: 7px;
 }
 
 .set-choise {
 	display: block;
-	margin-top: 15px;
+	margin-top: 7px;
 }
 
 .set-arrow {
-	margin-top: 15px;
+	margin-top: 7px;
 }
 
 .set-wrapper {
@@ -1168,8 +1173,8 @@ a:hover {
 }
 
 .set-product__image-wrapper {
-	width: 140px;
-	height: 140px;
+	width: 40px;
+	height: 40px;
 	border-radius: 50%;
 	background: white;
 	overflow: hidden;
@@ -1179,10 +1184,10 @@ a:hover {
 
 .set-product__button {
 	position: absolute;
-	top: 95px;
-	left: 29px;
-	width: 80px;
-	height: 80px;
+	top: 26px;
+	left: 6.5px;
+	width: 28px;
+	height: 28px;
 	background: #ee4e23;
 	border: none;
 	border-radius: 50%;
@@ -1197,11 +1202,11 @@ a:hover {
 .set-product__paint {
 	display: block;
 	position: absolute;
-	top: 40px;
-	left: 14px;
-	width: 30px;
-	height: 4px;
-	border-radius: 2px;
+	top: 14px;
+	left: 4px;
+	width: 12px;
+	height: 2px;
+	border-radius: 1px;
 	background: white;
 	-webkit-transform: rotate(45deg);
 	    -ms-transform: rotate(45deg);
@@ -1212,11 +1217,11 @@ a:hover {
 	display: block;
 	position: absolute;
 	content: "";
-	top: -14px;
-	left: 14px;
-	width: 30px;
-	height: 4px;
-	border-radius: 2px;
+	top: -5.5px;
+	left: 5.5px;
+	width: 12px;
+	height: 2px;
+	border-radius: 1px;
 	background: white;
 	-webkit-transform: rotate(90deg);
 	    -ms-transform: rotate(90deg);
@@ -1225,10 +1230,10 @@ a:hover {
 
 .product-cart {
 	position: absolute;
-	top: -200px;
+	top: -130px;
 	left: -32px;
-	width: 200px;
-	height: 340px;
+	width: 100px;
+	height: 170px;
 	background: white;
 	-webkit-box-shadow: 0px 13px 73px 0px rgba(0, 0, 0, 0.16);
 	        box-shadow: 0px 13px 73px 0px rgba(0, 0, 0, 0.16);
@@ -1237,10 +1242,10 @@ a:hover {
 
 .product-cart__heart {
 	position: absolute;
-	top: 0px;
-	right: 0;
-	width: 40px;
-	height: 40px;
+	top: 3px;
+	right: 3px;
+	width: 20px;
+	height: 20px;
 	border: none;
 	cursor: pointer;
 	padding: 0;
@@ -1261,41 +1266,44 @@ a:hover {
 
 .product-cart__img-wrapper {
 	display: inline-block;
-	width: 170px;
-	height: 170px;
+	width: 90%;
 	border-radius: 50%;
 	overflow: hidden;
 	margin-top: 10px;
 }
 
+.product-cart__img {
+	display: block;
+}
+
 .product-cart__name {
 	margin: 0;
-	font-size: 24px;
+	font-size: 14px;
 }
 
 .product-cart__price {
 	margin: 0;
-	font-size: 18px;
+	font-size: 10px;
 }
 
 .product-cart__button {
 	margin-top: 8px;
-	font-size: 18px;
+	font-size: 8px;
 }
 
 .set-product--one {
-	top: -12px;
+	top: 12px;
 	left: 50px;
 }
 
 .set-product--two {
-	top: 64px;
-	left: 460px;
+	top: 32px;
+	left: 230px;
 }
 
 .set-product--three {
-	top: 65px;
-	left: 650px;
+	top: 46px;
+	left: 120px;
 }
 
 .set-button-wraper {
@@ -1323,18 +1331,18 @@ a:hover {
 
 .quote {
 	text-align: center;
-	margin-top: 50px;
+	margin-top: 20px;
 }
 
 .quote-title {
 	margin: 0;
-	padding-top: 20px;
+	padding-top: 10px;
 }
 
 .quote-subscribe {
 	margin: 0;
 	padding-top: 0px;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 }
 
 .quote-wrapper {
@@ -1345,15 +1353,20 @@ a:hover {
 	margin: 0 auto;
 	-ms-flex-pack: distribute;
 	    justify-content: space-around;
+	padding: 0 7px;
 }
 
 .quote-cart {
 	-ms-flex-preferred-size: 100%;
 	    flex-basis: 100%;
 	height: 100%;
-	margin: 0 7px;
-	-webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
-	        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+	margin-right: 7px;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+	        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+.quote-cart:last-child {
+	margin-right: 0;
 }
 
 .quote-cart__image-wrapper {
@@ -1375,7 +1388,7 @@ a:hover {
 .qoute-cart__text {
 	display: block;
 	font-size: 8px;
-	padding: 0 10px;
+	padding: 0 7px;
 }
 
 .quote-cart__icon {
@@ -1396,25 +1409,31 @@ a:hover {
 	background-size: cover;
 }
 
+
+
+
+
+
+
 .blog{
 	text-align: center;
-	margin-top: 50px;
+	margin-top: 20px;
 }
 
 .blog-title {
 	margin: 0;
-	padding-top: 20px;
+	padding-top: 10px;
 }
 
 .blog-subscribe {
 	margin: 0;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 }
 
 .blog-wrapper {
 	max-width: 1170px;
 	margin: 0 auto;
-	padding: 0 15px;
+	padding: 0 7px;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -1447,7 +1466,7 @@ a:hover {
 	display: block;
 	text-decoration: none;
 	color: black;
-	padding-top: 20px;
+	padding-top: 10px;
 }
 
 
@@ -1458,7 +1477,7 @@ a:hover {
 
 .main-footer {
 	background: #e8ecef;
-	margin-top: 50px;
+	margin-top: 20px;
 }
 
 .footer-wrapper {
@@ -1476,7 +1495,8 @@ a:hover {
 	    align-content: space-between;
 	position: relative;
 	margin: 0 auto;
-	padding: 0 15px;	
+	padding: 0 7px;
+	height: 130px;
 }
 
 .logo-footer {
@@ -1486,7 +1506,7 @@ a:hover {
 
 .pay {
 	display: block;
-	margin: 20px 0;
+	margin: 10px 0;
 }
 
 .pay__item {
@@ -1526,7 +1546,7 @@ a:hover {
 	text-decoration: none;
 	color: black;
 	font-size: 10px;
-	margin: 8px 0;
+	margin: 2px 0;
 }
 
 a:hover {
@@ -1536,7 +1556,7 @@ a:hover {
 .copy {
 	display: block;
 	text-align: center;
-	padding-bottom: 30px;
+	padding-bottom: 15px;
 }
 
 .social-footer {
